Update swagger info